Обновление сайта: Обновлен contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,7 @@
       opacity: 0;
       animation: fadeIn 3s ease forwards;
       z-index: -1;
-      filter: brightness(0.5);
+      filter: brightness(0.5) blur(5px);
     }
 
     @keyframes fadeIn {
