Обновление: поправки в index.html поддержка отображения информации в поисковом инструменте

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <html lang="ru">
 <head>
 <meta charset="utf-8"/>
+<!-- Метатеги для подтверждения владения сайтом -->
+<meta content="88e408529c1f4700" name="yandex-verification"/>
+<meta content="KP9xbHhqtDeGHfXsIUzlnu0sId9dVapIiQosdOhLbjU" name="google-site-verification">
+<!-- SEO: описание и отображение в поиске -->
+<meta content="Официальный сайт романа «Сингулярность». История, герои, мир, дата релиза. Там, где кончается страх — начинается мы." name="description"/>
+<meta content="Сингулярность, роман, Артур Рахимкулов, sci-fi, герои, релиз, новелла, фантастика, Аня, Дарья" name="keywords"/>
+<meta content="Сингулярность — роман Артура Рахимкулова" property="og:title"/>
+<meta content="Фантастический роман «Сингулярность». Погрузись в историю, познакомься с героями, следи за релизом." property="og:description"/>
+<meta content="https://singularitypage.ru/assets/singularity_logo2.png" property="og:image"/>
+<meta content="https://singularitypage.ru" property="og:url"/>
+<meta content="website" property="og:type"/>
+</meta>
 <title>Сингулярность</title>
 <link href="assets/singularity_logo2.png" rel="icon" type="image/png"/>
 <link href="style.css" rel="stylesheet"/>
