--- a/anya.html
+++ b/anya.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="ru">
 <head>
-<meta charset="utf-8"/>
-<title>Сингулярность: Аня</title>
-<link href="style.css" rel="stylesheet"/>
-<link href="assets/singularity_logo2.png" rel="icon" type="image/png"/>
-<style>
+  <meta charset="utf-8"/>
+  <title>Сингулярность: Аня</title>
+  <link href="style.css" rel="stylesheet"/>
+  <link href="assets/singularity_logo2.png" rel="icon" type="image/png"/>
+  <style>
     body {
       background-color: #000;
       color: white;
@@ -26,14 +25,26 @@
       width: 100%;
       background: url("assets/19.jpg") no-repeat center center / cover;
       opacity: 0;
-      animation: fadeIn 3s ease forwards;
+      animation:
+        fadeIn 2.5s ease forwards,
+        backgroundDrift 4s ease-out forwards;
       z-index: -1;
       filter: brightness(0.5);
+      background-position: center center;
     }
 
     @keyframes fadeIn {
       to {
         opacity: 1;
+      }
+    }
+
+    @keyframes backgroundDrift {
+      0% {
+        background-position: center center;
+      }
+      100% {
+        background-position: center 65%;
       }
     }
 
@@ -90,102 +101,101 @@
       margin: 0 auto;
       font-family: 'Segoe UI', sans-serif;
     }
-  
-.anya-description {
-  max-width: 800px;
-  margin: 100px auto 60px;
-  padding: 0 20px;
-  text-align: center;
-  font-size: 1.1em;
-  font-family: 'Segoe UI', sans-serif;
-  line-height: 1.7;
-}
 
-.anya-description {
-  margin-top: 500px !important;
-}
+    .anya-description {
+      max-width: 800px;
+      margin: 100px auto 60px;
+      padding: 0 20px;
+      text-align: center;
+      font-size: 1.1em;
+      font-family: 'Segoe UI', sans-serif;
+      line-height: 1.7;
+    }
 
-.typing-effect {
-  display: inline-block;
-  border-right: 2px solid white;
-  white-space: nowrap;
-  overflow: hidden;
-  max-width: 0;
-  animation:
-    typing 3s steps(33, end) forwards,
-    blink-caret 0.75s step-end infinite;
-}
+    .anya-description {
+      margin-top: 500px !important;
+    }
 
-@keyframes typing {
-  from { max-width: 0 }
-  to { max-width: 1000px }
-}
+    .typing-effect {
+      display: inline-block;
+      border-right: 2px solid white;
+      white-space: nowrap;
+      overflow: hidden;
+      max-width: 0;
+      animation:
+        typing 3s steps(33, end) forwards,
+        blink-caret 0.75s step-end infinite;
+    }
 
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: white }
-}
-  50% { border-color: white }
-}
-  50% { border-color: white }
-}
-</style>
+    @keyframes typing {
+      from { max-width: 0 }
+      to { max-width: 1000px }
+    }
+
+    @keyframes blink-caret {
+      from, to { border-color: transparent }
+      50% { border-color: white }
+    }
+  </style>
 </head>
 <body class="preload">
-<div class="top-tabs">
-<div class="headline">
-<img alt="Сингулярность" class="fade-in fade-delay-1" src="assets/singularity_logo.gif" style="height: 130px;"/>
-<div class="part-label fade-in fade-delay-2">─── Аня ───</div>
-</div>
-<div class="tab" onclick="location.href='index.html'">Сингулярность</div>
-<div class="tab active" onclick="location.href='anya.html'">Сингулярность: Аня</div>
-<div class="tab" onclick="location.href='darya.html'">Сингулярность: Дарья</div>
-<div class="tab" onclick="location.href='syngame.html'">Сингулярность: Новелла</div>
-<div class="tab" onclick="location.href='contacts.html'">КОНТАКТЫ</div>
-<div class="tab" onclick="location.href='terms.html'" title="Условия использования">УСЛОВИЯ ИСПОЛЬЗОВАНИЯ</div></div>
-<div class="overlay"><p class="subtitle"><span class="typing-effect">Выжить — не значит жить.</span></p></div>
-<div class="anya-description fade-in fade-delay-3">
-<p>
-    «Сингулярность: Аня» — это мидквел, сюжетно и тематически связанный с первой частью книги «Сингулярность». Повесть раскрывает внутренний мир героини, чья сдержанная доброта и глубокая эмоциональность сталкиваются с холодной реальностью. Это не рассказ о действиях — это рассказ о взгляде. О выборе остаться человеком, когда проще всего — закрыться. О боли, которая не кричит, но прожигает изнутри. О надежде, за которую никто не просил бороться, но кто-то всё же не отпустил.
+  <div class="top-tabs">
+    <div class="headline">
+      <img alt="Сингулярность" class="fade-in fade-delay-1" src="assets/singularity_logo.gif" style="height: 130px;"/>
+      <div class="part-label fade-in fade-delay-2">─── Аня ───</div>
+    </div>
+    <div class="tab" onclick="location.href='index.html'">Сингулярность</div>
+    <div class="tab active" onclick="location.href='anya.html'">Сингулярность: Аня</div>
+    <div class="tab" onclick="location.href='darya.html'">Сингулярность: Дарья</div>
+    <div class="tab" onclick="location.href='syngame.html'">Сингулярность: Новелла</div>
+    <div class="tab" onclick="location.href='contacts.html'">КОНТАКТЫ</div>
+    <div class="tab" onclick="location.href='terms.html'" title="Условия использования">УСЛОВИЯ ИСПОЛЬЗОВАНИЯ</div>
+  </div>
+  <div class="overlay">
+    <p class="subtitle"><span class="typing-effect">Выжить — не значит жить.</span></p>
+  </div>
+  <div class="anya-description fade-in fade-delay-3">
+    <p>
+      «Сингулярность: Аня» — это мидквел, сюжетно и тематически связанный с первой частью книги «Сингулярность». Повесть раскрывает внутренний мир героини, чья сдержанная доброта и глубокая эмоциональность сталкиваются с холодной реальностью. Это не рассказ о действиях — это рассказ о взгляде. О выборе остаться человеком, когда проще всего — закрыться. О боли, которая не кричит, но прожигает изнутри. О надежде, за которую никто не просил бороться, но кто-то всё же не отпустил.
+      <br/><br/>
+      На фоне медленно распадающегося мира, где настоящие чувства кажутся пережитком, Аня остаётся той, кто ещё верит. Верит в людей, в любовь, в силу простых слов и поступков. И эта вера — не слабость, а сила, которую невозможно отнять.
+      <br/><br/>
+      Выход мидквела состоится одновременно с релизом «<strong>Сингулярность: Часть первая</strong>».
+    </p>
+  </div>
+  <script>
+    const pageOrder = [
+      'index.html',
+      'anya.html',
+      'darya.html',
+      'syngame.html',
+      'contacts.html'
+    ];
 
-На фоне медленно распадающегося мира, где настоящие чувства кажутся пережитком, Аня остаётся той, кто ещё верит. Верит в людей, в любовь, в силу простых слов и поступков. И эта вера — не слабость, а сила, которую невозможно отнять.
+    let scrolled = false;
+    const current = window.location.pathname.split('/').pop();
 
-Выход мидквела состоится одновременно с релизом «<strong>Сингулярность: Часть первая</strong>».
-  </p>
-</div>
-<script>
-  const pageOrder = [
-    'index.html',
-    'anya.html',
-    'darya.html',
-    'syngame.html',
-    'contacts.html'
-  ];
+    window.addEventListener('wheel', function (event) {
+      if (scrolled) return;
+      scrolled = true;
 
-  let scrolled = false;
-  const current = window.location.pathname.split('/').pop();
+      const currentIndex = pageOrder.indexOf(current);
+      let nextPage = null;
 
-  window.addEventListener('wheel', function (event) {
-    if (scrolled) return;
-    scrolled = true;
+      if (event.deltaY > 0 && currentIndex < pageOrder.length - 1) {
+        nextPage = pageOrder[currentIndex + 1];
+      } else if (event.deltaY < 0 && currentIndex > 0) {
+        nextPage = pageOrder[currentIndex - 1];
+      }
 
-    const currentIndex = pageOrder.indexOf(current);
-    let nextPage = null;
-
-    if (event.deltaY > 0 && currentIndex < pageOrder.length - 1) {
-      nextPage = pageOrder[currentIndex + 1];
-    } else if (event.deltaY < 0 && currentIndex > 0) {
-      nextPage = pageOrder[currentIndex - 1];
-    }
-
-    if (nextPage) {
-      setTimeout(() => {
-        window.location.href = nextPage;
-      }, 300);
-    } else {
-      scrolled = false;
-    }
-  }, { passive: true });
-</script>
+      if (nextPage) {
+        setTimeout(() => {
+          window.location.href = nextPage;
+        }, 300);
+      } else {
+        scrolled = false;
+      }
+    }, { passive: true });
+  </script>
 </body>
 </html>
