--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,10 @@
       left: 0;
       height: 100%;
       width: 100%;
-      background: url("assets/20.jpg") no-repeat center center / cover;
+      background-image: url("assets/20.jpg");
+      background-repeat: no-repeat;
+      background-size: 110%;
+      background-position: calc(50% + var(--bg-x, 0px)) calc(50% + var(--bg-y, 0px));
       opacity: 0;
       animation: fadeIn 3s ease forwards;
       z-index: -1;
@@ -289,4 +292,14 @@
 </form>
 </div>
 <script></script>
+
+<script>
+document.addEventListener("mousemove", function(e) {
+  const x = (e.clientX / window.innerWidth - 0.5) * 30;
+  const y = (e.clientY / window.innerHeight - 0.5) * 30;
+  document.body.style.setProperty('--bg-x', `${x}px`);
+  document.body.style.setProperty('--bg-y', `${y}px`);
+});
+</script>
+
 </body></html>
