Изменение текста darya.html

--- a/darya.html
+++ b/darya.html
@@ -120,9 +120,10 @@ body::before {
 <div class="tab" onclick="location.href='contacts.html'">КОНТАКТЫ</div>
 <div class="tab" onclick="location.href='terms.html'" title="Условия использования">УСЛОВИЯ ИСПОЛЬЗОВАНИЯ</div></div><div class="overlay"><p class="subtitle"><span class="typing-effect">Когда нельзя спастись — можно остаться собой.</span></p></div><div class="darya-description fade-in fade-delay-3">
 <p>
-    «Сингулярность: Дарья» — это мидквел, раскрывающий внутренний путь героини, чей голос почти не слышен в основной истории. Это не рассказ о победах, это история об усталости. О теле, которое не справляется. О душе, которая всё ещё держится.
-Дарья не спасает мир — она пытается спасти себя.
-Повесть выйдет <strong>27 июня 2025 года</strong>, чтобы ты знал, ради чего она держалась — и какова была цена.
+    «Сингулярность: Дарья» — это мидквел, сюжетно и тематически связанный с первой частью книги «Сингулярность». Повесть раскрывает внутренний мир героини, чья молчаливая борьба остаётся почти незаметной. Это не рассказ о великих целях — это рассказ о выживании. О боли, которая не выражается словами. О страхе, который не видно. О выборе идти дальше, когда тело подводит, а душа просит тишины.
+
+Дарья — не символ стойкости, не героиня в сиянии. Она — человек. Обычный, упрямый, уставший. И именно в этом — её сила. В том, чтобы не притворяться сильной, когда всё рушится. В том, чтобы искать свет, даже если не веришь, что он ещё есть. Её путь — не вверх, а вглубь. Туда, где можно снова стать собой.   Выход мидквела состоится одновременно с релизом «Сингулярность: Часть первая».
+
   </p>
 </div><script>
   const pageOrder = [
