Обновление оформления syngame.html

--- a/syngame.html
+++ b/syngame.html
@@ -119,9 +119,7 @@
 <div class="part-label fade-in fade-delay-3">В разработке</div>
 </div>
 <div class="syngame-description fade-in fade-delay-3">
-<p>
-      «Сингулярность: Новелла» — это интерактивный опыт, объединяющий элементы визуальной новеллы и философского высказывания. В этом проекте игроку предстоит не только сделать выбор, но и столкнуться с последствиями, которые могут быть необратимы. Это история не о том, чтобы победить, а о том, чтобы понять. И пройти путь до конца — несмотря ни на что.
-    </p>
+<p><strong>«Сингулярность: Новелла»</strong> — это будущий проект, основанный на романе <em>«Сингулярность: Часть Первая»</em> и его мидквелах. Мы создаём интерактивную визуальную новеллу, в которой игрок не просто делает выбор — он проживает его последствия. Это не история о победе. Это история о понимании, боли и пути, который нужно пройти до конца — несмотря ни на что.</p>
 <p style="margin-top: 30px; font-weight: bold;">Выход будет осуществлен на</p><div class="platform-icons">
 <img alt="Steam" src="assets/steam.png"/>
 <img alt="RenPy" src="assets/renpy.png"/>
