Небольшие изменения в index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </div>
 <div class="overlay">
 <p class="subtitle fade-in fade-delay-2">«Там, где кончается страх — начинаемся мы» </p>
-<p class="author-line fade-in fade-delay-3"><strong>Роман Артура Рахимкулова</strong></p>
+<p class="author-line fade-in fade-delay-3"><strong>Роман Артура Шевченко</strong></p>
 <div class="release-label fade-in fade-delay-3" style="font-family: 'Segoe UI', sans-serif; font-family: 'Segoe UI', sans-serif; font-weight: bold;">Дата выхода</div>
 <div class="timer-container fade-in fade-delay-3">
 <div class="circle-timer" id="days">
